--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build: .
     container_name: price-checker
     restart: unless-stopped
+    ports:
+      - "5000:5000"
     volumes:
       - ./config.yaml:/app/config.yaml:ro
       - ./data:/app/data
