--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./config.yaml:/app/config.yaml:ro
       - ./data:/app/data
+      - /etc/localtime:/etc/localtime:ro
     environment:
       - CONFIG_PATH=/app/config.yaml
       - DB_PATH=/app/data/checker.db
