--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-httpx>=0.27.0
-beautifulsoup4>=4.12.0
-lxml>=5.0.0
-apscheduler>=3.10.0
-pyyaml>=6.0.0
-flask>=3.0.0
+httpx>=0.27,<1
+beautifulsoup4>=4.12,<5
+lxml>=5.0,<6
+apscheduler>=3.10,<4
+pyyaml>=6.0,<7
+flask>=3.0,<4
